<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment_maneger"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:orientation="horizontal"
        android:background="#606060">
        <TextView
            android:id="@+id/fileTextView"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="@string/file_page"
            android:layout_weight="1"
            android:background="#E0E0E0"
            />
        <TextView
            android:id="@+id/scanTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="@string/scan_page"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:layout_marginLeft="1dp"/>
        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/search_page"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:layout_marginLeft="1dp"/>
        <TextView
            android:id="@+id/itemListTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/itemList_page"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:layout_marginLeft="1dp"/>

        <TextView
            android:id="@+id/itemDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/itemDetail_page"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:layout_marginLeft="1dp"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/tabBar">

    </RelativeLayout>

</RelativeLayout>
