<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="資料操作"
            android:textColor="@color/text_black"
            />

        <TextView
            android:id="@+id/clearTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_gray"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/clear_data"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="讀取資料"
            android:textColor="@color/text_black"
            />

        <TextView
            android:id="@+id/inputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_gray"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/input_file" />

        <TextView
            android:id="@+id/inputItemTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_gray"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/input_file_item" />
        <TextView
            android:id="@+id/readNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:background="@color/bg_gray"
            android:padding="10dp"
            android:text="開啟財產名稱檔案" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="輸出資料"
            android:textColor="@color/text_black"
            />
        <TextView
            android:id="@+id/outputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:background="@color/bg_gray"
            android:padding="10dp"
            android:text="行動裝置轉至電腦(財產)" />

        <TextView
            android:id="@+id/outputItemTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:background="@color/bg_gray"
            android:padding="10dp"
            android:text="行動裝置轉至電腦(物品)" />
    </LinearLayout>




</RelativeLayout>